// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prep meal plan a pre-planned basic plan 1`] = `
Object {
  "days": Array [
    Object {
      "dayIndex": 0,
      "id": "plan-4pKEMqa5Y-day_0",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 0,
              "id": "action_MOCK_ID_0",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "SHORT",
          "dayIndex": 0,
          "id": "plan-4pKEMqa5Y-day_0-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 0,
              "id": "action_MOCK_ID_7",
              "mealIndex": 1,
              "mealType": "NORMAL",
              "servings": 4,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_7",
              "dayIndex": 0,
              "id": "action_MOCK_ID_8",
              "leftovers": false,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "MEDIUM",
          "dayIndex": 0,
          "id": "plan-4pKEMqa5Y-day_0-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 0,
              "id": "action_MOCK_ID_10",
              "mealIndex": 2,
              "mealType": "FANCY",
              "servings": 2,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_10",
              "dayIndex": 0,
              "id": "action_MOCK_ID_11",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "LONG",
          "dayIndex": 0,
          "id": "plan-4pKEMqa5Y-day_0-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 1,
      "id": "plan-4pKEMqa5Y-day_1",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 1,
              "id": "action_MOCK_ID_1",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 1,
          "id": "plan-4pKEMqa5Y-day_1-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_7",
              "dayIndex": 1,
              "id": "action_MOCK_ID_9",
              "leftovers": true,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 1,
          "id": "plan-4pKEMqa5Y-day_1-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 1,
              "id": "action_MOCK_ID_12",
              "mealIndex": 2,
              "mealType": "FANCY",
              "servings": 4,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_12",
              "dayIndex": 1,
              "id": "action_MOCK_ID_13",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "LONG",
          "dayIndex": 1,
          "id": "plan-4pKEMqa5Y-day_1-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 2,
      "id": "plan-4pKEMqa5Y-day_2",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 2,
              "id": "action_MOCK_ID_2",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 2,
          "id": "plan-4pKEMqa5Y-day_2-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_12",
              "dayIndex": 2,
              "id": "action_MOCK_ID_14",
              "leftovers": true,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 2,
          "id": "plan-4pKEMqa5Y-day_2-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 2,
              "id": "action_MOCK_ID_15",
              "mealIndex": 2,
              "mealType": "FANCY",
              "servings": 4,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_15",
              "dayIndex": 2,
              "id": "action_MOCK_ID_16",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "LONG",
          "dayIndex": 2,
          "id": "plan-4pKEMqa5Y-day_2-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 3,
      "id": "plan-4pKEMqa5Y-day_3",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 3,
              "id": "action_MOCK_ID_3",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 3,
          "id": "plan-4pKEMqa5Y-day_3-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_15",
              "dayIndex": 3,
              "id": "action_MOCK_ID_17",
              "leftovers": true,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 3,
          "id": "plan-4pKEMqa5Y-day_3-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 3,
              "id": "action_MOCK_ID_22",
              "mealIndex": 2,
              "mealType": "NORMAL",
              "servings": 6,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_22",
              "dayIndex": 3,
              "id": "action_MOCK_ID_23",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "MEDIUM",
          "dayIndex": 3,
          "id": "plan-4pKEMqa5Y-day_3-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 4,
      "id": "plan-4pKEMqa5Y-day_4",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 4,
              "id": "action_MOCK_ID_4",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 4,
          "id": "plan-4pKEMqa5Y-day_4-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_22",
              "dayIndex": 4,
              "id": "action_MOCK_ID_24",
              "leftovers": true,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 4,
          "id": "plan-4pKEMqa5Y-day_4-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 4,
              "id": "action_MOCK_ID_18",
              "mealIndex": 2,
              "mealType": "QUICK",
              "servings": 2,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_18",
              "dayIndex": 4,
              "id": "action_MOCK_ID_19",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "SHORT",
          "dayIndex": 4,
          "id": "plan-4pKEMqa5Y-day_4-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 5,
      "id": "plan-4pKEMqa5Y-day_5",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 5,
              "id": "action_MOCK_ID_5",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 5,
          "id": "plan-4pKEMqa5Y-day_5-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_22",
              "dayIndex": 5,
              "id": "action_MOCK_ID_25",
              "leftovers": true,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 5,
          "id": "plan-4pKEMqa5Y-day_5-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 5,
              "id": "action_MOCK_ID_20",
              "mealIndex": 2,
              "mealType": "QUICK",
              "servings": 2,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_20",
              "dayIndex": 5,
              "id": "action_MOCK_ID_21",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "SHORT",
          "dayIndex": 5,
          "id": "plan-4pKEMqa5Y-day_5-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 6,
      "id": "plan-4pKEMqa5Y-day_6",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 6,
              "id": "action_MOCK_ID_6",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "LONG",
          "dayIndex": 6,
          "id": "plan-4pKEMqa5Y-day_6-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 6,
              "id": "action_MOCK_ID_26",
              "mealIndex": 1,
              "mealType": "NORMAL",
              "servings": 2,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_26",
              "dayIndex": 6,
              "id": "action_MOCK_ID_27",
              "leftovers": false,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "MEDIUM",
          "dayIndex": 6,
          "id": "plan-4pKEMqa5Y-day_6-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 6,
              "id": "action_MOCK_ID_28",
              "mealIndex": 2,
              "mealType": "FANCY",
              "servings": 2,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_28",
              "dayIndex": 6,
              "id": "action_MOCK_ID_29",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "LONG",
          "dayIndex": 6,
          "id": "plan-4pKEMqa5Y-day_6-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
  ],
  "defaultServings": 2,
  "groceryDay": 0,
  "id": "plan-4pKEMqa5Y",
  "isBlueprint": false,
  "strategy": "PREP",
  "warnings": Array [],
  "weekIndex": null,
}
`;

exports[`prep meal plan a pre-planned plan 1`] = `
Object {
  "days": Array [
    Object {
      "dayIndex": 0,
      "id": "plan-4pKEMqa5Y-day_0",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 0,
              "id": "action_MOCK_ID_0",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 0,
          "id": "plan-4pKEMqa5Y-day_0-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_23",
              "dayIndex": 0,
              "id": "action_MOCK_ID_25",
              "leftovers": true,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 0,
          "id": "plan-4pKEMqa5Y-day_0-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 0,
              "id": "action_MOCK_ID_7",
              "mealIndex": 2,
              "mealType": "FANCY",
              "servings": 4,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_7",
              "dayIndex": 0,
              "id": "action_MOCK_ID_8",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "LONG",
          "dayIndex": 0,
          "id": "plan-4pKEMqa5Y-day_0-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 1,
      "id": "plan-4pKEMqa5Y-day_1",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 1,
              "id": "action_MOCK_ID_1",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 1,
          "id": "plan-4pKEMqa5Y-day_1-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_7",
              "dayIndex": 1,
              "id": "action_MOCK_ID_9",
              "leftovers": true,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 1,
          "id": "plan-4pKEMqa5Y-day_1-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 1,
              "id": "action_MOCK_ID_10",
              "mealIndex": 2,
              "mealType": "FANCY",
              "servings": 4,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_10",
              "dayIndex": 1,
              "id": "action_MOCK_ID_11",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "LONG",
          "dayIndex": 1,
          "id": "plan-4pKEMqa5Y-day_1-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 2,
      "id": "plan-4pKEMqa5Y-day_2",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 2,
              "id": "action_MOCK_ID_2",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 2,
          "id": "plan-4pKEMqa5Y-day_2-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_10",
              "dayIndex": 2,
              "id": "action_MOCK_ID_12",
              "leftovers": true,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 2,
          "id": "plan-4pKEMqa5Y-day_2-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 2,
              "id": "action_MOCK_ID_19",
              "mealIndex": 2,
              "mealType": "FANCY",
              "servings": 6,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_19",
              "dayIndex": 2,
              "id": "action_MOCK_ID_20",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "LONG",
          "dayIndex": 2,
          "id": "plan-4pKEMqa5Y-day_2-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 3,
      "id": "plan-4pKEMqa5Y-day_3",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 3,
              "id": "action_MOCK_ID_3",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 3,
          "id": "plan-4pKEMqa5Y-day_3-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 3,
              "id": "action_MOCK_ID_13",
              "mealIndex": 1,
              "type": "EAT_OUT",
            },
          ],
          "availability": "EAT_OUT",
          "dayIndex": 3,
          "id": "plan-4pKEMqa5Y-day_3-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 3,
              "id": "action_MOCK_ID_14",
              "mealIndex": 2,
              "mealType": "QUICK",
              "servings": 2,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_14",
              "dayIndex": 3,
              "id": "action_MOCK_ID_15",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "SHORT",
          "dayIndex": 3,
          "id": "plan-4pKEMqa5Y-day_3-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 4,
      "id": "plan-4pKEMqa5Y-day_4",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 4,
              "id": "action_MOCK_ID_4",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 4,
          "id": "plan-4pKEMqa5Y-day_4-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_19",
              "dayIndex": 4,
              "id": "action_MOCK_ID_21",
              "leftovers": true,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 4,
          "id": "plan-4pKEMqa5Y-day_4-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 4,
              "id": "action_MOCK_ID_16",
              "mealIndex": 2,
              "type": "EAT_OUT",
            },
          ],
          "availability": "EAT_OUT",
          "dayIndex": 4,
          "id": "plan-4pKEMqa5Y-day_4-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 5,
      "id": "plan-4pKEMqa5Y-day_5",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 5,
              "id": "action_MOCK_ID_5",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 5,
          "id": "plan-4pKEMqa5Y-day_5-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_19",
              "dayIndex": 5,
              "id": "action_MOCK_ID_22",
              "leftovers": true,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 5,
          "id": "plan-4pKEMqa5Y-day_5-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 5,
              "id": "action_MOCK_ID_17",
              "mealIndex": 2,
              "mealType": "QUICK",
              "servings": 2,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_17",
              "dayIndex": 5,
              "id": "action_MOCK_ID_18",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "SHORT",
          "dayIndex": 5,
          "id": "plan-4pKEMqa5Y-day_5-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 6,
      "id": "plan-4pKEMqa5Y-day_6",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 6,
              "id": "action_MOCK_ID_6",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "MEDIUM",
          "dayIndex": 6,
          "id": "plan-4pKEMqa5Y-day_6-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 6,
              "id": "action_MOCK_ID_23",
              "mealIndex": 1,
              "mealType": "NORMAL",
              "servings": 4,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_23",
              "dayIndex": 6,
              "id": "action_MOCK_ID_24",
              "leftovers": false,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "MEDIUM",
          "dayIndex": 6,
          "id": "plan-4pKEMqa5Y-day_6-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 6,
              "id": "action_MOCK_ID_26",
              "mealIndex": 2,
              "mealType": "FANCY",
              "servings": 2,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_26",
              "dayIndex": 6,
              "id": "action_MOCK_ID_27",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "LONG",
          "dayIndex": 6,
          "id": "plan-4pKEMqa5Y-day_6-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
  ],
  "defaultServings": 2,
  "groceryDay": 0,
  "id": "plan-4pKEMqa5Y",
  "isBlueprint": false,
  "strategy": "PREP",
  "warnings": Array [],
  "weekIndex": null,
}
`;

exports[`prep meal plan for a large family plan 1`] = `
Object {
  "days": Array [
    Object {
      "dayIndex": 0,
      "id": "plan_MOCK_ID_0-day_0",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 0,
              "id": "action_MOCK_ID_1",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 0,
          "id": "plan_MOCK_ID_0-day_0-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 0,
              "id": "action_MOCK_ID_8",
              "mealIndex": 1,
              "type": "EAT_OUT",
            },
          ],
          "availability": "EAT_OUT",
          "dayIndex": 0,
          "id": "plan_MOCK_ID_0-day_0-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 0,
              "id": "action_MOCK_ID_18",
              "mealIndex": 2,
              "mealType": "BIG",
              "servings": 12,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_18",
              "dayIndex": 0,
              "id": "action_MOCK_ID_19",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "MEDIUM",
          "dayIndex": 0,
          "id": "plan_MOCK_ID_0-day_0-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 1,
      "id": "plan_MOCK_ID_0-day_1",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 1,
              "id": "action_MOCK_ID_2",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "LONG",
          "dayIndex": 1,
          "id": "plan_MOCK_ID_0-day_1-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 1,
              "id": "action_MOCK_ID_9",
              "mealIndex": 1,
              "mealType": "QUICK",
              "servings": 6,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_9",
              "dayIndex": 1,
              "id": "action_MOCK_ID_10",
              "leftovers": false,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "SHORT",
          "dayIndex": 1,
          "id": "plan_MOCK_ID_0-day_1-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 1,
              "id": "action_MOCK_ID_21",
              "mealIndex": 2,
              "mealType": "FANCY",
              "servings": 6,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_21",
              "dayIndex": 1,
              "id": "action_MOCK_ID_22",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "LONG",
          "dayIndex": 1,
          "id": "plan_MOCK_ID_0-day_1-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 2,
      "id": "plan_MOCK_ID_0-day_2",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 2,
              "id": "action_MOCK_ID_3",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "SHORT",
          "dayIndex": 2,
          "id": "plan_MOCK_ID_0-day_2-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 2,
              "id": "action_MOCK_ID_11",
              "mealIndex": 1,
              "mealType": "QUICK",
              "servings": 6,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_11",
              "dayIndex": 2,
              "id": "action_MOCK_ID_12",
              "leftovers": false,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "SHORT",
          "dayIndex": 2,
          "id": "plan_MOCK_ID_0-day_2-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 2,
              "id": "action_MOCK_ID_13",
              "mealIndex": 2,
              "mealType": "QUICK",
              "servings": 6,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_13",
              "dayIndex": 2,
              "id": "action_MOCK_ID_14",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "SHORT",
          "dayIndex": 2,
          "id": "plan_MOCK_ID_0-day_2-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 3,
      "id": "plan_MOCK_ID_0-day_3",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 3,
              "id": "action_MOCK_ID_4",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 3,
          "id": "plan_MOCK_ID_0-day_3-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_18",
              "dayIndex": 3,
              "id": "action_MOCK_ID_20",
              "leftovers": true,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 3,
          "id": "plan_MOCK_ID_0-day_3-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 3,
              "id": "action_MOCK_ID_15",
              "mealIndex": 2,
              "type": "EAT_OUT",
            },
          ],
          "availability": "EAT_OUT",
          "dayIndex": 3,
          "id": "plan_MOCK_ID_0-day_3-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 4,
      "id": "plan_MOCK_ID_0-day_4",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 4,
              "id": "action_MOCK_ID_5",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "SHORT",
          "dayIndex": 4,
          "id": "plan_MOCK_ID_0-day_4-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 4,
              "id": "action_MOCK_ID_16",
              "mealIndex": 1,
              "mealType": "QUICK",
              "servings": 6,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_16",
              "dayIndex": 4,
              "id": "action_MOCK_ID_17",
              "leftovers": false,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "SHORT",
          "dayIndex": 4,
          "id": "plan_MOCK_ID_0-day_4-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 4,
              "id": "action_MOCK_ID_23",
              "mealIndex": 2,
              "mealType": "BIG",
              "servings": 12,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_23",
              "dayIndex": 4,
              "id": "action_MOCK_ID_24",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "LONG",
          "dayIndex": 4,
          "id": "plan_MOCK_ID_0-day_4-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 5,
      "id": "plan_MOCK_ID_0-day_5",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 5,
              "id": "action_MOCK_ID_6",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 5,
          "id": "plan_MOCK_ID_0-day_5-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_23",
              "dayIndex": 5,
              "id": "action_MOCK_ID_25",
              "leftovers": true,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 5,
          "id": "plan_MOCK_ID_0-day_5-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 5,
              "id": "action_MOCK_ID_26",
              "mealIndex": 2,
              "mealType": "BIG",
              "servings": 12,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_26",
              "dayIndex": 5,
              "id": "action_MOCK_ID_27",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "MEDIUM",
          "dayIndex": 5,
          "id": "plan_MOCK_ID_0-day_5-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 6,
      "id": "plan_MOCK_ID_0-day_6",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 6,
              "id": "action_MOCK_ID_7",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 6,
          "id": "plan_MOCK_ID_0-day_6-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_26",
              "dayIndex": 6,
              "id": "action_MOCK_ID_28",
              "leftovers": true,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 6,
          "id": "plan_MOCK_ID_0-day_6-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 6,
              "id": "action_MOCK_ID_29",
              "mealIndex": 2,
              "mealType": "FANCY",
              "servings": 6,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_29",
              "dayIndex": 6,
              "id": "action_MOCK_ID_30",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "LONG",
          "dayIndex": 6,
          "id": "plan_MOCK_ID_0-day_6-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
  ],
  "defaultServings": 6,
  "groceryDay": 0,
  "id": "plan_MOCK_ID_0",
  "isBlueprint": false,
  "strategy": "PREP",
  "warnings": Array [],
  "weekIndex": null,
}
`;

exports[`prep meal plan for a really busy person 1`] = `
Object {
  "days": Array [
    Object {
      "dayIndex": 0,
      "id": "plan_MOCK_ID_0-day_0",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 0,
              "id": "action_MOCK_ID_1",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 0,
          "id": "plan_MOCK_ID_0-day_0-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 0,
              "id": "action_MOCK_ID_8",
              "mealIndex": 1,
              "mealType": "QUICK",
              "servings": 2,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_8",
              "dayIndex": 0,
              "id": "action_MOCK_ID_9",
              "leftovers": false,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "SHORT",
          "dayIndex": 0,
          "id": "plan_MOCK_ID_0-day_0-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 0,
              "id": "action_MOCK_ID_10",
              "mealIndex": 2,
              "mealType": "QUICK",
              "servings": 2,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_10",
              "dayIndex": 0,
              "id": "action_MOCK_ID_11",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "SHORT",
          "dayIndex": 0,
          "id": "plan_MOCK_ID_0-day_0-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 1,
      "id": "plan_MOCK_ID_0-day_1",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 1,
              "id": "action_MOCK_ID_2",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 1,
          "id": "plan_MOCK_ID_0-day_1-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 1,
              "id": "action_MOCK_ID_12",
              "mealIndex": 1,
              "type": "EAT_OUT",
            },
          ],
          "availability": "EAT_OUT",
          "dayIndex": 1,
          "id": "plan_MOCK_ID_0-day_1-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_18",
              "dayIndex": 1,
              "id": "action_MOCK_ID_23",
              "leftovers": true,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 1,
          "id": "plan_MOCK_ID_0-day_1-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 2,
      "id": "plan_MOCK_ID_0-day_2",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 2,
              "id": "action_MOCK_ID_3",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "SHORT",
          "dayIndex": 2,
          "id": "plan_MOCK_ID_0-day_2-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_18",
              "dayIndex": 2,
              "id": "action_MOCK_ID_24",
              "leftovers": true,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 2,
          "id": "plan_MOCK_ID_0-day_2-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 2,
              "id": "action_MOCK_ID_13",
              "mealIndex": 2,
              "mealType": "QUICK",
              "servings": 2,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_13",
              "dayIndex": 2,
              "id": "action_MOCK_ID_14",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "SHORT",
          "dayIndex": 2,
          "id": "plan_MOCK_ID_0-day_2-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 3,
      "id": "plan_MOCK_ID_0-day_3",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 3,
              "id": "action_MOCK_ID_4",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 3,
          "id": "plan_MOCK_ID_0-day_3-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_18",
              "dayIndex": 3,
              "id": "action_MOCK_ID_25",
              "leftovers": true,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 3,
          "id": "plan_MOCK_ID_0-day_3-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 3,
              "id": "action_MOCK_ID_15",
              "mealIndex": 2,
              "type": "EAT_OUT",
            },
          ],
          "availability": "EAT_OUT",
          "dayIndex": 3,
          "id": "plan_MOCK_ID_0-day_3-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 4,
      "id": "plan_MOCK_ID_0-day_4",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 4,
              "id": "action_MOCK_ID_5",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 4,
          "id": "plan_MOCK_ID_0-day_4-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_18",
              "dayIndex": 4,
              "id": "action_MOCK_ID_26",
              "leftovers": true,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 4,
          "id": "plan_MOCK_ID_0-day_4-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 4,
              "id": "action_MOCK_ID_18",
              "mealIndex": 2,
              "mealType": "BIG",
              "servings": 16,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_18",
              "dayIndex": 4,
              "id": "action_MOCK_ID_19",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "MEDIUM",
          "dayIndex": 4,
          "id": "plan_MOCK_ID_0-day_4-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 5,
      "id": "plan_MOCK_ID_0-day_5",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 5,
              "id": "action_MOCK_ID_6",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "LONG",
          "dayIndex": 5,
          "id": "plan_MOCK_ID_0-day_5-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_18",
              "dayIndex": 5,
              "id": "action_MOCK_ID_20",
              "leftovers": true,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 5,
          "id": "plan_MOCK_ID_0-day_5-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 5,
              "id": "action_MOCK_ID_16",
              "mealIndex": 2,
              "mealType": "QUICK",
              "servings": 2,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_16",
              "dayIndex": 5,
              "id": "action_MOCK_ID_17",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "SHORT",
          "dayIndex": 5,
          "id": "plan_MOCK_ID_0-day_5-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 6,
      "id": "plan_MOCK_ID_0-day_6",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 6,
              "id": "action_MOCK_ID_7",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 6,
          "id": "plan_MOCK_ID_0-day_6-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_18",
              "dayIndex": 6,
              "id": "action_MOCK_ID_21",
              "leftovers": true,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 6,
          "id": "plan_MOCK_ID_0-day_6-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_18",
              "dayIndex": 6,
              "id": "action_MOCK_ID_22",
              "leftovers": true,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 6,
          "id": "plan_MOCK_ID_0-day_6-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
  ],
  "defaultServings": 2,
  "groceryDay": 0,
  "id": "plan_MOCK_ID_0",
  "isBlueprint": false,
  "strategy": "PREP",
  "warnings": Array [
    "You don't seem to have a lot of time to prep meals! You'll need to prep 7 meals in only 1 day. You can make your schedule more realistic by switching some meals to eating out.",
  ],
  "weekIndex": null,
}
`;

exports[`prep meal plan for a variety plan 1`] = `
Object {
  "days": Array [
    Object {
      "dayIndex": 0,
      "id": "plan_MOCK_ID_0-day_0",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 0,
              "id": "action_MOCK_ID_1",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 0,
          "id": "plan_MOCK_ID_0-day_0-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 0,
              "id": "action_MOCK_ID_8",
              "mealIndex": 1,
              "mealType": "QUICK",
              "servings": 2,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_8",
              "dayIndex": 0,
              "id": "action_MOCK_ID_9",
              "leftovers": false,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "SHORT",
          "dayIndex": 0,
          "id": "plan_MOCK_ID_0-day_0-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 0,
              "id": "action_MOCK_ID_16",
              "mealIndex": 2,
              "mealType": "FANCY",
              "servings": 4,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_16",
              "dayIndex": 0,
              "id": "action_MOCK_ID_17",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "LONG",
          "dayIndex": 0,
          "id": "plan_MOCK_ID_0-day_0-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 1,
      "id": "plan_MOCK_ID_0-day_1",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 1,
              "id": "action_MOCK_ID_2",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 1,
          "id": "plan_MOCK_ID_0-day_1-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 1,
              "id": "action_MOCK_ID_10",
              "mealIndex": 1,
              "type": "EAT_OUT",
            },
          ],
          "availability": "EAT_OUT",
          "dayIndex": 1,
          "id": "plan_MOCK_ID_0-day_1-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 1,
              "id": "action_MOCK_ID_19",
              "mealIndex": 2,
              "mealType": "NORMAL",
              "servings": 4,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_19",
              "dayIndex": 1,
              "id": "action_MOCK_ID_20",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "MEDIUM",
          "dayIndex": 1,
          "id": "plan_MOCK_ID_0-day_1-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 2,
      "id": "plan_MOCK_ID_0-day_2",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 2,
              "id": "action_MOCK_ID_3",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "SHORT",
          "dayIndex": 2,
          "id": "plan_MOCK_ID_0-day_2-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 2,
              "id": "action_MOCK_ID_11",
              "mealIndex": 1,
              "mealType": "QUICK",
              "servings": 2,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_11",
              "dayIndex": 2,
              "id": "action_MOCK_ID_12",
              "leftovers": false,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "SHORT",
          "dayIndex": 2,
          "id": "plan_MOCK_ID_0-day_2-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 2,
              "id": "action_MOCK_ID_13",
              "mealIndex": 2,
              "mealType": "QUICK",
              "servings": 2,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_13",
              "dayIndex": 2,
              "id": "action_MOCK_ID_14",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "SHORT",
          "dayIndex": 2,
          "id": "plan_MOCK_ID_0-day_2-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 3,
      "id": "plan_MOCK_ID_0-day_3",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 3,
              "id": "action_MOCK_ID_4",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 3,
          "id": "plan_MOCK_ID_0-day_3-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_16",
              "dayIndex": 3,
              "id": "action_MOCK_ID_18",
              "leftovers": true,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 3,
          "id": "plan_MOCK_ID_0-day_3-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 3,
              "id": "action_MOCK_ID_15",
              "mealIndex": 2,
              "type": "EAT_OUT",
            },
          ],
          "availability": "EAT_OUT",
          "dayIndex": 3,
          "id": "plan_MOCK_ID_0-day_3-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 4,
      "id": "plan_MOCK_ID_0-day_4",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 4,
              "id": "action_MOCK_ID_5",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 4,
          "id": "plan_MOCK_ID_0-day_4-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_19",
              "dayIndex": 4,
              "id": "action_MOCK_ID_21",
              "leftovers": true,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 4,
          "id": "plan_MOCK_ID_0-day_4-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 4,
              "id": "action_MOCK_ID_24",
              "mealIndex": 2,
              "mealType": "NORMAL",
              "servings": 4,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_24",
              "dayIndex": 4,
              "id": "action_MOCK_ID_25",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "MEDIUM",
          "dayIndex": 4,
          "id": "plan_MOCK_ID_0-day_4-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 5,
      "id": "plan_MOCK_ID_0-day_5",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 5,
              "id": "action_MOCK_ID_6",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "LONG",
          "dayIndex": 5,
          "id": "plan_MOCK_ID_0-day_5-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 5,
              "id": "action_MOCK_ID_22",
              "mealIndex": 1,
              "mealType": "QUICK",
              "servings": 2,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_22",
              "dayIndex": 5,
              "id": "action_MOCK_ID_23",
              "leftovers": false,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "SHORT",
          "dayIndex": 5,
          "id": "plan_MOCK_ID_0-day_5-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 5,
              "id": "action_MOCK_ID_27",
              "mealIndex": 2,
              "mealType": "FANCY",
              "servings": 2,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_27",
              "dayIndex": 5,
              "id": "action_MOCK_ID_28",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "LONG",
          "dayIndex": 5,
          "id": "plan_MOCK_ID_0-day_5-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
    Object {
      "dayIndex": 6,
      "id": "plan_MOCK_ID_0-day_6",
      "meals": Array [
        Object {
          "actions": Array [
            Object {
              "dayIndex": 6,
              "id": "action_MOCK_ID_7",
              "mealIndex": 0,
              "type": "SKIP",
            },
          ],
          "availability": "NONE",
          "dayIndex": 6,
          "id": "plan_MOCK_ID_0-day_6-meal_0",
          "mealIndex": 0,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "cookActionId": "action_MOCK_ID_24",
              "dayIndex": 6,
              "id": "action_MOCK_ID_26",
              "leftovers": true,
              "mealIndex": 1,
              "type": "EAT",
            },
          ],
          "availability": "NONE",
          "dayIndex": 6,
          "id": "plan_MOCK_ID_0-day_6-meal_1",
          "mealIndex": 1,
          "servings": 2,
        },
        Object {
          "actions": Array [
            Object {
              "dayIndex": 6,
              "id": "action_MOCK_ID_29",
              "mealIndex": 2,
              "mealType": "FANCY",
              "servings": 2,
              "type": "COOK",
            },
            Object {
              "cookActionId": "action_MOCK_ID_29",
              "dayIndex": 6,
              "id": "action_MOCK_ID_30",
              "leftovers": false,
              "mealIndex": 2,
              "type": "EAT",
            },
          ],
          "availability": "LONG",
          "dayIndex": 6,
          "id": "plan_MOCK_ID_0-day_6-meal_2",
          "mealIndex": 2,
          "servings": 2,
        },
      ],
    },
  ],
  "defaultServings": 2,
  "groceryDay": 0,
  "id": "plan_MOCK_ID_0",
  "isBlueprint": false,
  "strategy": "PREP",
  "warnings": Array [],
  "weekIndex": null,
}
`;
